# mime-mail

./: .gitignore  .travis.yml  mime-mail-ses.cabal  mime-mail.cabal  sources.txt  stack.yaml
Network/Mail/: Mime.hs
Network/Mail/Mime/: SES.hs
mime-mail/: ChangeLog.md  README.md  mime-mail.cabal  test.yml
mime-mail-ses/: ChangeLog.md  README.md  mime-mail-ses.cabal
mime-mail-ses/Network/Mail/Mime/: SES.hs
mime-mail-ses/Network/Mail/Mime/SES/: Internal.hs
mime-mail-ses/send-aws/: Main.hs
mime-mail-ses/test/by-the-book/: Main.hs
mime-mail/Network/Mail/: Mime.hs
mime-mail/test/Network/Mail/: MimeSpec.hs
