Name:                mime-mail-ses
Version:             0.4.0.0
Synopsis:            Send mime-mail messages via Amazon SES
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/mime-mail-ses>.
Homepage:            http://github.com/snoyberg/mime-mail
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
extra-source-files:  ChangeLog.md
                     README.md

Library
  Exposed-modules:     Network.Mail.Mime.SES
  Build-depends:       base               >= 4.6       && < 5
                     , base64-bytestring  >= 0.1
                     , bytestring         >= 0.9
                     , time               >= 1.1
                     , old-locale
                     , http-client        >= 0.2.2.2
                     , http-conduit       >= 2.1
                     , mime-mail          >= 0.3
                     , transformers       >= 0.2
                     , http-types         >= 0.6.8
                     , xml-conduit
                     , xml-types
                     , text
                     , conduit
                     , cryptohash         >= 0.7.3
                     , byteable
  ghc-options: -Wall
