Name:                mime-mail-ses
Version:             0.4.1
Synopsis:            Send mime-mail messages via Amazon SES
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/mime-mail-ses>.
Homepage:            http://github.com/snoyberg/mime-mail
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8
extra-source-files:  ChangeLog.md
                     README.md

Library
  Exposed-modules:     Network.Mail.Mime.SES, Network.Mail.Mime.SES.Internal
  Build-depends:       base               >= 4.9       && < 5
                     , base64-bytestring  >= 0.1
                     , bytestring         >= 0.9
                     , time               >= 1.1
                     , http-client        >= 0.2.2.2
                     , http-client-tls    >= 0.2.4
                     , http-conduit       >= 2.1
                     , mime-mail          >= 0.3
                     , http-types         >= 0.6.8
                     , xml-conduit
                     , xml-types
                     , text
                     , conduit
                     , cryptohash         >= 0.7.3
                     , byteable
                     , case-insensitive
                     , base16-bytestring
  ghc-options: -Wall

Executable send-aws
  hs-source-dirs: send-aws
  Main-Is: Main.hs
  build-depends: base
               , optparse-applicative
               , http-client
               , http-client-tls
               , mime-mail
               , mime-mail-ses
               , text

Test-suite by-the-book
           type: exitcode-stdio-1.0
           hs-source-dirs: test/by-the-book
           main-is: Main.hs
           build-depends: base
                        , mime-mail-ses
                        , tasty
                        , tasty-hunit
                        , bytestring
                        , time
                        , case-insensitive
           ghc-options: -Wall
