Name:                mime-mail-ses
Version:             0.4.3
Synopsis:            Send mime-mail messages via Amazon SES
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/mime-mail-ses>.
Homepage:            http://github.com/snoyberg/mime-mail
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10
extra-source-files:  ChangeLog.md
                     README.md

Library
  Default-Language:    Haskell2010
  Exposed-modules:     Network.Mail.Mime.SES, Network.Mail.Mime.SES.Internal
  Build-depends:       base               >= 4.9       && < 5
                     , base16-bytestring
                     , base64-bytestring  >= 0.1
                     , byteable
                     , bytestring         >= 0.9
                     , case-insensitive
                     , conduit
                     , cryptohash         >= 0.7.3
                     , http-client        >= 0.2.2.2
                     , http-client-tls    >= 0.2.4
                     , http-conduit       >= 2.1
                     , http-types         >= 0.6.8
                     , mime-mail          >= 0.3
                     , text
                     , time               >= 1.1
                     , xml-conduit
                     , xml-types
  ghc-options: -Wall

Executable send-aws
  default-language: Haskell2010
  hs-source-dirs: send-aws
  Main-Is: Main.hs
  build-depends: base
               , http-client
               , http-client-tls
               , mime-mail
               , mime-mail-ses
               , optparse-applicative
               , text

Test-suite by-the-book
           default-language: Haskell2010
           type: exitcode-stdio-1.0
           hs-source-dirs: test/by-the-book
           main-is: Main.hs
           build-depends: base
                        , bytestring
                        , case-insensitive
                        , mime-mail-ses
                        , tasty
                        , tasty-hunit
                        , time
           ghc-options: -Wall
