Name:                mime-mail
Version:             0.4.1.1
Synopsis:            Compose MIME email messages.
Description:         This package provides some high-level datatypes for declaring MIME email messages, functions for automatically composing these into bytestrings, and the ability to send bytestrings via the sendmail executable. You can also use any other library you wish to send via different methods, eg directly to SMTP.
Homepage:            http://github.com/snoyberg/mime-mail
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman <michael@snoyman.com>
Maintainer:          Michael Snoyman <michael@snoyman.com>
Category:            Email
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.6


Library
  Exposed-modules: Network.Mail.Mime
  Build-depends:   base                >= 4          && < 5
                 , base64-bytestring   >= 0.1        && < 0.2
                 , process             >= 1.0        && < 1.2
                 , random              >= 1.0        && < 1.1
                 , blaze-builder       >= 0.2.1      && < 0.4
                 , bytestring          >= 0.9.1      && < 0.10
                 , text                >= 0.7        && < 0.12
                 , filepath            >= 1.2

source-repository head
  type:     git
  location: git://github.com/snoyberg/mime-mail.git
