Name:                mime-mail
Version:             0.4.3
Synopsis:            Compose MIME email messages.
Description:         This package provides some high-level datatypes for declaring MIME email messages, functions for automatically composing these into bytestrings, and the ability to send bytestrings via the sendmail executable. You can also use any other library you wish to send via different methods, eg directly to SMTP.
Homepage:            http://github.com/snoyberg/mime-mail
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman <michael@snoyman.com>
Maintainer:          Michael Snoyman <michael@snoyman.com>
Category:            Email
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.8


Library
  Exposed-modules: Network.Mail.Mime
  Build-depends:   base                >= 4          && < 5
                 , base64-bytestring   >= 0.1
                 , process             >= 1.0
                 , random              >= 1.0
                 , blaze-builder       >= 0.2.1      && < 0.4
                 , bytestring          >= 0.9.1
                 , text                >= 0.7
                 , filepath            >= 1.2

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test

    build-depends: base
                 , hspec >= 1.3
                 , mime-mail
                 , blaze-builder
                 , bytestring
                 , text
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/mime-mail.git
