Name:                mime-mail
Version:             0.4.12
Synopsis:            Compose MIME email messages.
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/mime-mail>.
Homepage:            http://github.com/snoyberg/mime-mail
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman <michael@snoyman.com>
Maintainer:          Michael Snoyman <michael@snoyman.com>
Category:            Email
Build-type:          Simple
extra-source-files:  README.md
                     ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.8


Library
  Exposed-modules: Network.Mail.Mime
  Build-depends:   base                >= 4          && < 5
                 , base64-bytestring   >= 0.1
                 , process             >= 1.0
                 , random              >= 1.0
                 , blaze-builder       >= 0.2.1      && < 0.5
                 , bytestring          >= 0.9.1
                 , text                >= 0.7
                 , filepath            >= 1.2

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules: Network.Mail.MimeSpec
    hs-source-dirs: test

    build-depends: base
                 , hspec >= 1.3
                 , mime-mail
                 , blaze-builder
                 , bytestring
                 , text
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/mime-mail.git
